<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="skip">Y U DO DIS TO ME?</string>
    <string name="sign_up">登录</string>
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>

    <string name="login_loading">正在登录...</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败，请检查用户名密码！</string>

    <string name="menu_item_formlist">表单列表</string>
    <string name="menu_item_formrecord">表单记录</string>
    <string name="menu_item_setting">系统设置</string>
    <string name="menu_item_upd">检查更新</string>
    <string name="menu_item_exit">退出系统</string>

    <string name="pref_header_account">个人信息</string>
    <string name="pref_header_pen_manage">蓝牙笔管理</string>

    <!-- 设置：个人账号信息-->
    <string name="setting_account_code_name">用户名</string>
    <string name="setting_account_group">组织</string>
    <string name="setting_account_email">邮件</string>
    <string name="setting_account_phone">电话</string>
    <string name="setting_account_user_name">姓名</string>

    <string name="setting_pref_category_key">setting_category</string>
    <string name="setting_pref_codename_key">setting_pref_codename</string>
    <string name="setting_pref_group_key">setting_pref_group</string>
    <string name="setting_pref_email_key">setting_pref_email</string>
    <string name="setting_pref_phone_key">setting_pref_phone</string>
    <string name="setting_pref_username_key">setting_pref_username</string>



    <string name="cube_ptr_pull_down">下拉</string>
    <string name="cube_ptr_pull_down_to_refresh">下拉刷新</string>
    <string name="cube_ptr_release_to_refresh">释放刷新</string>
    <string name="cube_ptr_refreshing">加载中...</string>
    <string name="cube_ptr_refresh_complete">更新完成.</string>

    <string name="cube_ptr_last_update">上次更新:&#160;</string>
    <string name="cube_ptr_seconds_ago">&#160;秒之前</string>
    <string name="cube_ptr_minutes_ago">&#160;分钟之前</string>
    <string name="cube_ptr_hours_ago">&#160;小时之前</string>


    <string name="wifi_ap_psw">AP PSW</string>
    <string name="cus_info">Custom Info</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="get_version">Get Version</string>
    <string name="hint_name">Please Input Name</string>
    <string name="hint_password">Please Input Password</string>
    <string name="hint_custom_info">Please Input Custom Info(or Empty)</string>
    <string name="default_version">Failed to get version</string>
    <string name="error_hint">Error</string>
    <string name="warning">Warning</string>
    <string name="type">Version</string>
    <string name="v1">v1</string>
    <string name="v4">v4</string>
    <string name="v5">v5</string>
    <string name="warning_input_name_and_password">Please Input Name and Password!!</string>
    <string name="ok">OK</string>
    <string name="warning_select_1_type_to_send">Please Select 1 Type To Send</string>
    <string name="wifi_not_connected">Please connect WiFi\nAnd try again</string>

    <string name="error_not_inited">Not Inited</string>
    <string name="error_wrong_type">Wrong Type</string>
    <string name="error_wrong_parameter">Wrong Parameter</string>
    <string name="error_crypt_failed">Crypt Failed</string>
    <string name="error_not_enough_memory">Not Enough Memory</string>
    <string name="error_exceed_max_length">Exceed Max Length</string>
    <string name="error_already_started">Already Started</string>
    <string name="error_already_stopped">Already Stopped</string>
    <string name="error_failed_to_start">Failed To Start</string>
    <string name="error_unkonwn_error">Unknonw Error</string>

    <string name="error_select_leat_1_version">Please select version to send</string>
    <string name="init_failed">Failed to init smart connection</string>
    <string name="start_failed">Failed to start smart connection</string>
    <string name="stop_failed">Failed to Stop smart connection</string>

    <string name="encryption_key_label">Encryption Key</string>
    <string name="encryption_key_hint">Encryption Key (Length Must Be 16)</string>

    <string name="v1v4_interval">V1/V4</string>
    <string name="v5_interval">V5</string>
    <string name="send_interval">Interval (ms)</string>

    <string name="local_music">本地音乐</string>
    <string name="recent_play">最近播放</string>
    <string name="local_manage">下载管理</string>
    <string name="my_artist">我的歌手</string>
    <string name="created_playlists">创建的歌单</string>
    <string name="my_fav_playlist">我喜欢的音乐</string>
    <string name="shared_to">分享到</string>

    <string name="queue_is_empty">播放队列为空</string>
    <string name="random_play">随机播放</string>
    <string name="loop_play">列表循环</string>
    <string name="play_one">单曲播放</string>

    <string name="sure_to_delete_music">确定删除歌曲吗</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="search_local_music">搜索本地歌曲</string>
    <string name="search_net_music">搜索音乐、歌手、歌词、...</string>
    <string name="sure_to_set_ringtone">确定成设置铃声吗</string>

    <string name="set_ringtone_successed">设置铃声成功！</string>

    <string name="app_name">ZBform</string>
    <string name="search">搜索</string>
    <string name="action_connect">连接设备</string>
    <string name="timing">定时播放</string>
    <string name="exit">退出</string>
    <string name="search_hint">歌名/歌手名</string>
    <string name="title_activity_search_">Search_Activity</string>
    <string name="dialog_fire_missiles">您确定要退出吗</string>
    <string name="fire">确定</string>

    <string name="next_play">已加入下一首播放</string>

    <color name="test_color">#696969</color>


    <string name="duration_format" translatable="false"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
    <string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%3$02d</xliff:g></string>
    <string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%2$02d:%3$02d</xliff:g></string>

    <string name="menu_sort_by">选择排序方式</string>
    <string name="sort_order_entry_az">按名称排序</string>
    <string name="sort_order_entry_dateadded">按添加时间排序</string>
    <string name="sort_order_entry_album">按专辑排序</string>
    <string name="sort_order_entry_artist">按歌手排序</string>
    <string name="sort_order_entry_number_of_songs">按歌曲数量排序</string>

    <string name="confirm">ok</string>
    <string name="textview_title_unlock">Unlock it</string>
    <string name="textview_title_lock">Lock it</string>
    <string name="textview_click_before">Unlock it to open the door of the new world !</string>
    <string name="textview_click_after">Go to : https://github.com/Bilibili/MagicaSakura</string>
    <string name="title_activity_settings">activity_settings</string>
    <string name="settings">Settings</string>
	<string name="user_feedback">User Feedback</string>
    <string name="about_us">About us</string>
    <string name="pic_quality">Picture Quality</string>

    <string name="connect_pen">连接蓝牙笔</string>


</resources>
