<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <com.zbform.penform.settings.SettingPreferenceCategory
        android:key="@string/setting_pref_category_key"
        android:title="@string/setting_account_code_name">
    </com.zbform.penform.settings.SettingPreferenceCategory>

        <Preference android:title="@string/setting_account_user_name"
            android:key="@string/setting_pref_username_key">
        </Preference>


        <Preference android:title="@string/setting_account_group"
            android:key="@string/setting_pref_group_key">
        </Preference>


        <Preference android:title="@string/setting_account_phone"
            android:key="@string/setting_pref_phone_key">
        </Preference>


        <Preference android:title="@string/setting_account_email"
            android:key="@string/setting_pref_email_key">
        </Preference>
</PreferenceScreen>
