<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	android:gravity="center_horizontal"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<android.support.v7.widget.Toolbar
		android:theme="@style/LoadTheme"
		android:background="@color/theme_color_primary"
		app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
		app:subtitleTextAppearance="@style/Toolbar.SubTitle"
		android:id="@+id/settings_toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" />
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:scrollbars="none">
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
 <View
				android:background="@color/black2"
				android:layout_width="fill_parent"
				android:layout_height="1.0dip" />
			<View
				android:background="@color/black2"
				android:layout_width="fill_parent"
				android:layout_height="1.0dip" />
		
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="50dp">
			<TextView
				android:id="@+id/txt_album"
				style="@style/TxtTitle"
				android:layout_width="fill_parent"
				android:layout_height="50dp"
				android:background="@drawable/setting_item_selector"
				android:drawablePadding="10dp"
				android:gravity="center_vertical"
				android:paddingLeft="16dp"
				android:paddingRight="16dp"
				android:text="@string/pic_quality"
				android:textSize="16sp"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="中"
				android:textSize="16sp"
				android:layout_toLeftOf="@id/pic_arrow"
				android:layout_centerVertical="true"
				android:paddingRight="16dp"/>

			<ImageView
				android:id="@+id/pic_arrow"
				android:layout_width="wrap_content"
				android:layout_height="50dp"
				android:layout_alignParentRight="true"
				android:src="@drawable/right"
				android:layout_alignBottom="@id/txt_album"
				android:paddingRight="16dp"/>
		</RelativeLayout>
		<View
			android:background="@color/black2"
			android:layout_width="fill_parent"
			android:layout_height="1.0dip" />

		<TextView
			android:id="@+id/txt_collect"
			style="@style/TxtTitle"
			android:layout_width="fill_parent"
			android:layout_height="50dp"
			android:background="@drawable/setting_item_selector"
			android:drawablePadding="10dp"
			android:drawableRight="@drawable/right"
			android:gravity="center_vertical"
			android:paddingLeft="16dp"
			android:paddingRight="16dp"
			android:text="兴趣标签"
			android:textSize="16sp" />
		<View
			android:background="@color/black2"
			android:layout_width="fill_parent"
			android:layout_height="1.0dip" />
		
		<TextView
					android:id="@+id/txt_money"
					style="@style/TxtTitle"
					android:textSize="16sp"
					android:gravity="center_vertical"
					android:background="@drawable/setting_item_selector"
					android:layout_width="fill_parent"
					android:layout_height="50dp"
					android:paddingLeft="16dp"
					android:paddingRight="16dp"
					android:drawablePadding="10dp"
					android:drawableRight="@drawable/right"
					android:text="@string/user_feedback" />
		<View
			android:background="@color/black2"
			android:layout_width="fill_parent"
			android:layout_height="1.0dip" />
		<TextView
					android:id="@+id/txt_card"
					style="@style/TxtTitle"
					android:textSize="16sp"
					android:gravity="center_vertical"
					android:background="@drawable/setting_item_selector"
					android:layout_width="fill_parent"
					android:layout_height="50dp"
					android:paddingLeft="16dp"
					android:paddingRight="16dp"
					android:drawablePadding="10dp"
					android:drawableRight="@drawable/right"
					android:text="SmartConnection" />
		<View
			android:background="@color/black2"
			android:layout_width="fill_parent"
			android:layout_height="1.0dip" />
		<TextView
					android:id="@+id/txt_smail"
					style="@style/TxtTitle"
					android:textSize="16sp"
					android:gravity="center_vertical"
					android:background="@drawable/setting_item_selector"
					android:layout_width="fill_parent"
					android:layout_height="50dp"
					android:paddingLeft="16dp"
					android:paddingRight="16dp"
					android:drawablePadding="10dp"
					android:drawableRight="@drawable/right"
					android:text="@string/about_us" />
		<View
			android:background="@color/black2"
			android:layout_width="fill_parent"
			android:layout_height="1.0dip" />

		<TextView
			android:id="@+id/txt_setting"
			style="@style/TxtTitle"
			android:layout_width="fill_parent"
			android:layout_height="50dp"
			android:background="@drawable/setting_item_selector"
			android:drawablePadding="10dp"
			android:drawableRight="@drawable/right"
			android:gravity="center_vertical"
			android:paddingLeft="16dp"
			android:paddingRight="16dp"
			android:text="退出登录"
			android:textSize="16sp" />
		<View
				android:background="@color/black2"
				android:layout_width="fill_parent"
				android:layout_height="1.0dip" />
	</LinearLayout>
	</ScrollView>
</LinearLayout>